examples/test/testpolicy8050.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8050
  namespace: namespace0
spec:
  podSelector:
    matchLabels:
      key38: value5
      key27: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value17
      podSelector:
        matchLabels:
          key43: value48
          key45: value25
          key34: value43
